Fixed column sizes

--- a/src/views/pages/people/rakesh/rakesh.njk
+++ b/src/views/pages/people/rakesh/rakesh.njk
@@ -103,7 +103,7 @@
 
         <div class="row">
           <section class="col-6 my-2">
-            <div class="kbl-grey-card">
+            <div class="kbl-grey-card h-100">
               <h5 class="kbl-heading">2013 - 1st Prize</h5>
               <div class="kbl-text soft award-desc">
                 <a class="kbl-link" href="https://go.okstate.edu/">OSU</a>
@@ -113,7 +113,7 @@
           </section>
 
           <section class="col-6 my-2">
-            <div class="kbl-grey-card">
+            <div class="kbl-grey-card h-100">
               <h5 class="kbl-heading">2012 - 3rd Prize</h5>
               <div class="kbl-text soft award-desc">
                 <a class="kbl-link" href="https://go.okstate.edu/">OSU</a>
@@ -124,7 +124,7 @@
           </section>
 
           <section class="col-6 my-2">
-            <div class="kbl-grey-card">
+            <div class="kbl-grey-card h-100">
               <h5 class="kbl-heading">2003 - Qualified National Eligibility Test (NET-ICAR)</h5>
 
               <div class="kbl-text soft award-desc">
@@ -136,7 +136,7 @@
           </section>
 
           <section class="col-6 my-2">
-            <div class="kbl-grey-card">
+            <div class="kbl-grey-card h-100">
               <h5 class="kbl-heading">2002 - 3rd Prize best award for poster paper presentation (Weather-based forewarning of rice blast in H.P.)</h5>
 
               <div class="kbl-text soft award-desc">
