--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -103,14 +103,14 @@
   }
 %}
 
-{% set interactome = {
+{% set huco = {
     img: "/assets/kbl-img/interactome.png",
     title: "Interactome",
-    link: "http://bioinfo.usu.edu/interactome/"
+    link: "http://bioinfo.usu.edu/hucopia/"
   }
 %}
 
-{% set hpi = [predhpi, apinet, deepHPI, interactome] %}
+{% set hpi = [predhpi, apinet, deepHPI, huco] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
