--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -11,7 +11,7 @@
         {% include "./_head-carousel.njk" %}
     </header><!-- /.sabbi-site-head -->
 
-    <article class="container mt-5">
+    <article class="container mt-5 px-5">
       <section class="row home-info-block-first">
         {% include "./_multi-carousel-new.njk" %}
       </section>
@@ -124,7 +124,7 @@
       </section>
     </article>
 
-    <div class="container mt-5">
+    <div class="container mt-5 px-5">
       <div class="research-fact">
         <div class="row py-5">
           <div class="col-4 text-center">
