--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,19 +70,6 @@ body {
   }
 }
 
-/*
-.kbl-social-wrapper a {
-  font-size: 150%!important;
-  color: $color-primary-light!important;
-  transition: $time-mid;
-  margin-right: 5px;
-
-  &:hover {
-    color: $color-primary!important;
-  }
-}
-*/
-
 ::selection {
   background: $color-primary-light;
   color: #fff;
@@ -204,4 +191,23 @@ footer {
   margin-top: 60px;
   width: 100%;
   height: 270px;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $color-primary;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $color-primary-dark;
 }
