--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -10,6 +10,9 @@
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader() }}
 
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'contact', link: '/contact'}]) }}
+
   <article class="container mt-5">
     <section class="row">
       <div class="col-8">
