--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -10,6 +10,9 @@
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader() }}
 
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'events', link: '/events'}]) }}
+
   <section class="sabbi-section stage_events_post">
       <div class="container">
         {% from './_functions.njk' import selector, activeCheck %}
