--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -10,6 +10,9 @@
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader() }}
 
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'news', link: '/news'}]) }}
+
   <article class="container-fluid pb-5 pt-1 my-5">
     <div class="row">
 
