--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -10,6 +10,9 @@
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader() }}
 
+  {% from "components/breadcrumb.njk" import breadcrumb %}
+  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'publications', link: '/publications'}, {name: 'conferences', link: '/publications/conferences'}]) }}
+
   {% from './_functions.njk' import selector, activeCheck %}
   {% from 'components/conf-card.njk' import confCard %}
   {% from './dates/17-19.njk' import pub2019, pub2018, pub2017 %}
