--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -11,13 +11,8 @@
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader() }}
 
-  <!--
-  {% from "components/img-header2.njk" import imgHeader2 %}
-  {{ imgHeader2("Research", "sabbi-page-header-classic3 sabbi-page-header-team page-header-lg") }}
-
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Research", location: ""} ]) }}
--->
+  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'research', link: '/research'}]) }}
 
   <main class="sabbi-page-wrap">
       <div class="container">
