Started on Calendar

--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -3,3 +3,4 @@
 @import './components/research-card';
 @import './components/multi-carousel';
 @import './components/conf-card';
+@import './components/calendar';
