--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>KAABiL</title>
+    <meta name="Utah State University Bioinformatics Lab" content="The Utah State University Bioinformatics Lab is led by Dr. Rakesh Kaundal. The group's research interests span a range of topics in applying statistical pattern ...">
     {% from "env.njk" import baseUrl %}
     <base href="{{ baseUrl }}" />
     <meta content="" name="description">
