--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700|Open+Sans:400,400i,600,700" rel="stylesheet">
+
+    <!-- ICONS -->
     <link href="assets/fonts/ionicons/css/ionicons.css" rel="stylesheet" type="text/css" />
     <link href="assets/fa/css/all.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
