Added Axios, requests work

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -109,7 +109,7 @@
     bio: "Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps, websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.",
     email: "itsme@shelbymccowan.com",
     img: "/image/raw/bioinfo/profile/shelby.jpg",
-    social: [{type:"twitter", link: "https://twitter.com/ShelbyMccowan"}]
+    social: []
   }
 %}
 
