--- a/src/views/components/calendar-small.njk
+++ b/src/views/components/calendar-small.njk
@@ -1,7 +1,7 @@
 {% macro ctxMenu() %}
   <article class="kbl-ctx-menu" id="ctx-menu">
     <div class="ctx-heading" id="ctx-heading"></div>
-    <div class="menu-item">Create Appointment</div>
+    <div class="menu-item" data-toggle="modal" data-target="#appointmentModal">Create Appointment</div>
     <div class="menu-item negative">Remove Appointment</div>
   </article>
 {%  endmacro %}
@@ -27,6 +27,40 @@
 
     </div>
   </article>
+
+  {{ appointmentModal() }}
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="/assets/js/kbl/calendar-small.js"></script>
   <script src="/assets/js/kbl/calendar-ctx-menu.js"></script>
+  <script src="/assets/js/kbl/calendar-request.js"></script>
+{% endmacro %}
+
+{% macro appointmentModal() %}
+  <section class="modal" tabindex="-1" id="appointmentModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="appointmentModalTitle">Appointment</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <section class="container-fluid">
+            <div class="row">
+              <div class="col-12">
+                <input class="form-control kbl-form" placeholder="Name" id="appointmentName"/>
+                <textarea class="form-control kbl-form" placeholder="Purpose of meeting" id="appointmentDesc"></textarea>
+              </div>
+            </div>
+          </section>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn kbl-btn-1" id="createAppointmentButton">Create Appointment</button>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endmacro %}
