--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -116,6 +116,13 @@
         <div class="kbl-text"><b>Email:</b> rkaundal@usu.edu</div>
 
         <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left mt-4">Go to Contact Form</a>
+
+        <div class="my-5"></div>
+
+        <h4 class="kbl-heading pt-5 pb-3 text-center">Set an Appointment!</h4>
+
+        {% from "components/calendar-small.njk" import calendarSmall %}
+        {{ calendarSmall() }}
       </div>
     </section>
 
