--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -18,9 +18,9 @@
 
       <!-- News - General -->
       <article class="col">
-        <div class="text-center col-header mb-4" style="font-size: 140%;">
+        <section class="text-center col-header mb-4" style="font-size: 140%;">
           <b>General</b>
-        </div>
+        </section>
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/citsatdb">
@@ -57,9 +57,9 @@
 
       <!-- News - Science -->
       <article class="col">
-        <div class="text-center col-header mb-4" style="font-size: 140%;">
+        <section class="text-center col-header mb-4" style="font-size: 140%;">
           <b>Science</b>
-        </div>
+        </section>
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newdeephpi">
@@ -98,9 +98,9 @@
 
       <!-- Blog -->
       <article class="col-sm-3">
-        <div class="text-center col-header mb-4" style="font-size: 140%;">
+        <section class="text-center col-header mb-4" style="font-size: 140%;">
           <b>Blog</b>
-        </div>
+        </section>
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newblog">
