--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -17,7 +17,7 @@
     <!-- ICONS -->
     <link href="assets/fonts/ionicons/css/ionicons.css" rel="stylesheet" type="text/css" />
     <link href="assets/fa/css/all.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
 
     <!-- Tools -->
     <link href="assets/tools/sequence/css/sequence-theme.basic.css" rel="stylesheet" media="all">
