--- a/src/scss/components/_calendar.scss
+++ b/src/scss/components/_calendar.scss
@@ -27,9 +27,20 @@
     cursor: pointer;
     border-radius: $border-radius;
     transition: $time-mid;
+    border: 1px solid $transparent;
 
-    &:hover,
-    &:focus {
+    &.selected {
+      border-color: $color-primary;
+      color: $color-primary;
+
+      &:hover {
+        background: $color-primary;
+        color: #fff;
+      }
+    }
+
+    &:hover:not(.selected),
+    &:focus:not(.selected) {
       background: $color-primary-very-light;
     }
   }
