--- a/src/views/components/calendar-small.njk
+++ b/src/views/components/calendar-small.njk
@@ -3,6 +3,10 @@
     <div class="ctx-heading" id="ctx-heading"></div>
     <div class="menu-item" data-toggle="modal" data-target="#appointmentModal">Create Appointment</div>
     <div class="menu-item negative">Remove Appointment</div>
+    <div class="ctx-heading" id="appt-header">Appointments</div>
+    <div class="appt-container" id="appt-container">
+
+    </div>
   </article>
 {%  endmacro %}
 
